--- a/front_fit/src/CSS/index.css
+++ b/front_fit/src/CSS/index.css
@@ -24,8 +24,8 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  display: block;
+  height: 100%;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -57,7 +57,9 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    /* background: linear-gradient(to left, #4b0082, #800080); */
+    background-image: url("../assets/bgs/BG.png");
+    background-size: cover;
   }
   a:hover {
     color: #747bff;
@@ -66,3 +68,5 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
