--- a/front_fit/src/CSS/login.css
+++ b/front_fit/src/CSS/login.css
@@ -1,6 +1,7 @@
 .login-bg {
-    height: 100%;
-    background-image: url("../assets/bgs/woman-stretching-yoga-mat-home\ 1.png");
-    background-size: cover;
+    background-image: url("../assets/bgs/woman-stretching-yoga-mat-home.png");
+    background-size: contain;
     border: aqua 1px solid;
+    background-repeat: no-repeat;
 }
+
