--- a/front_fit/src/CSS/mainPage.css
+++ b/front_fit/src/CSS/mainPage.css
@@ -8,7 +8,8 @@ html, body {
 }
 body {
     font-family: Arial, sans-serif;
-    color: #fff;
+    color: #ffffff;
+    background-color: #f5f5f5;
 }
 .container{
     width: 100%;
@@ -61,15 +62,6 @@ body {
     height: auto;
     border-radius: 10px;
     flex-shrink: 0;
-}
-
-div {
-    /* border: red 2px dashed; */
-    
-}
-
-nav {
-    /* border: orange 2px dashed; */
 }
 
 .header-btn {
