--- a/front_fit/src/CSS/SignIn.css
+++ b/front_fit/src/CSS/SignIn.css
@@ -4,7 +4,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    padding: 4rem 0;
   }
   
   .content {
@@ -29,7 +30,7 @@
     margin-bottom: 32px;
   }
   
-  .images {
+  .displayWelcome {
     display: flex;
     justify-content: space-between;
     margin: 32px 0;
@@ -38,12 +39,6 @@
   .image {
     width: 30%;
     border-radius: 8px;
-  }
-  
-  .text-section {
-    display: flex;
-    justify-content: space-between;
-    margin: 32px 0;
   }
   
   .text {
