--- a/front_fit/src/CSS/mainPage.css
+++ b/front_fit/src/CSS/mainPage.css
@@ -18,30 +18,38 @@ body {
     border: orange 2px dashed;
 }
 
-.main-section {
+/* .main-section {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 2rem 4rem;
     width: 100%;
     
-}
+} */
 
 .text-content {
-    max-width: 50%;
+    width: 100%;
+    background: linear-gradient(to left, #4b0082, #800080);
+    display: flex;
 }
 
-.text-content .tagline {
-    font-size: 1rem;
-    text-transform: uppercase;
-    margin-bottom: 1rem;
+.text-content > div {
+    width: 80%;
     color: #fff;
-    
+}
+
+.tc-text {
+    padding-top: 10%; 
+    line-height: 3rem;
+}
+
+.tagline {
+    opacity: 80%;
+    font-style: italic;
+    text-transform: uppercase;
 }
 
 .text-content h1 {
-    font-size: 2.5rem;
-    margin-bottom: 1.5rem;
     line-height: 1.3;
 
 }
@@ -78,4 +86,8 @@ body {
     transition-duration: 500ms;
     background: #9F35EC;
     color: white;
+}
+
+.featured-image {
+    width: inherit;
 }
