--- a/front_fit/src/CSS/dashboard.css
+++ b/front_fit/src/CSS/dashboard.css
@@ -1,3 +1,17 @@
+.dashboard-page{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.agenda-card{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    width: 100%;
+    margin-bottom: 1em;
+}
+
 .agenda-card-btn{
     grid-row-start: 1;
     grid-row-end: 2;
@@ -17,7 +31,7 @@
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 4;
-    width: 50em;
+    width: 100%;
     height: 100%;
 }
 
@@ -38,7 +52,19 @@
     grid-column-end: 5;
 }
 
-.agenda-card{
+.total-card{
     display: grid;
-    grid-template-columns: auto auto auto;
+    column-gap: 1em;
+    width: 100%;
+    grid-template-columns: auto auto auto
+}
+
+.total-card-title{
+    grid-column: span 3;
+}
+
+.total-card-item{
+    grid-row-start: 2;
+    grid-column: span 1;
+    justify-self: center;
 }
