--- a/front_fit/src/CSS/index.css
+++ b/front_fit/src/CSS/index.css
@@ -5,7 +5,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,6 +27,7 @@ body {
   height: 100%;
   min-width: 320px;
   min-height: 100vh;
+  background-image: url("../assets/bgs/BG.png");
 }
 
 h1 {
