--- a/front_fit/src/CSS/index.css
+++ b/front_fit/src/CSS/index.css
@@ -1,4 +1,6 @@
 :root {
+  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -28,6 +30,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-image: url("../assets/bgs/BG.png");
+  font-family: 'Inter', sans-serif;
 }
 
 h1 {
