--- a/front_fit/src/CSS/demographic.css
+++ b/front_fit/src/CSS/demographic.css
@@ -90,3 +90,10 @@
     margin-top: 20px;
     text-align: center;
   }
+
+  .error {
+    color: red;
+    font-size: 12px;
+    margin-top: 5px;
+  }
+  
