--- a/front_fit/src/CSS/SignIn.css
+++ b/front_fit/src/CSS/SignIn.css
@@ -1,25 +1,22 @@
 .sign-up {
-    background-color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
-    padding: 4rem 0;
   }
   
-  .content {
+  .si-content {
     text-align: center;
-    max-width: 1200px;
     width: 100%;
   }
   
   .title {
     color: #9e35eb;
     font-family: "Inter-ExtraBold", Helvetica, sans-serif;
-    font-size: 55px;
+    font-size: 45px;
     font-weight: 800;
-    margin-bottom: 8px;
+    margin-bottom: 1rem;
   }
   
   .subtitle {
@@ -33,16 +30,21 @@
   .displayWelcome {
     display: flex;
     justify-content: space-between;
-    margin: 32px 0;
+    margin: 32px 5%;
   }
 
   .ImgDiv {
     width: 30%;
     align-items: center;
+    padding: 1rem;
+    background-color: white;
+    box-shadow: 3px 8px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 1rem;
   }
   
   .image {
     border-radius: 8px;
+    width: 98%;
   }
   
   .text {
