--- a/front_fit/src/CSS/mainPage.css
+++ b/front_fit/src/CSS/mainPage.css
@@ -171,7 +171,12 @@ This is for LOGIN
     outline: none;
     border: #9e35eb 2px solid;
     box-shadow: 0 0 15px rgba(0, 0, 255, 0.5);
+}
 
+  input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none; /* Chrome, Safari */
+  margin: 0; /* Optional: Remove margin */
 }
 
 .forgot-pass {
