--- a/front_fit/src/CSS/radiogroup.css
+++ b/front_fit/src/CSS/radiogroup.css
@@ -1,14 +1,18 @@
 .radio-group {
-    display: flex;
-    flex-direction: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
     margin-bottom: 20px;
   }
   
   .radio-option {
     display: flex;
-    align-items: center;
+    justify-content: center;
     margin-bottom: 10px;
     position: relative;
+    border: #842ed6 1px solid;
+    border-radius: 5px;
+    width: 100%;
   }
   
   .radio-option input {
@@ -25,17 +29,18 @@
     background-color: white;
     border-radius: 5px;
     cursor: pointer;
-    text-align: center;
-    transition: background-color 0.3s ease, transform 0.2s ease;
     user-select: none;
   }
-  .radio-option label:hover {
+
+  .radio-option label:hover, .radio-option:has(label:hover) {
+    transition: background-color 0.3s ease, transform 0.2s ease;
     background-color: #842ed6;
+    color: white;
   }
   
-  .radio-option label.selected {
+  .radio-option label.selected, .radio-option:has(label.selected) {
     background-color: #6b25b8; 
     color: white;
-    transform: scale(1.05); 
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    transform: scale(1.05);  
   }
+   
