--- a/front_fit/src/CSS/dashboard.css
+++ b/front_fit/src/CSS/dashboard.css
@@ -7,7 +7,7 @@
 
 .agenda-card{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 24% 30%;
     width: 100%;
     margin-bottom: 1em;
 }
@@ -16,14 +16,14 @@
     grid-row-start: 1;
     grid-row-end: 2;
     height: 3em;
+    width: 100%;
+    margin-bottom: 10px;
 }
 
 .agenda-card-design{
     grid-row-start: 2;
     grid-row-end: 4;
     height: 13em;
-
-    border: #bc61ff 1px solid;
 }
 
 .agenda-card-list{
@@ -33,7 +33,6 @@
     grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 4;
-    width: 100%;
     height: 100%;
 }
 
@@ -61,10 +60,6 @@
 
 }
 
-.week-s-agenda {
-    width: 15rem;
-}
-
 .total-card{
     display: grid;
     column-gap: 1em;
@@ -81,6 +76,7 @@
     grid-column: span 1;
     justify-self: center;
     width: 100%;
+    /* font-size: 3rem; */
 }
 
 .total-card-circle{
@@ -89,4 +85,44 @@
     border-color: #bc61ff;
     aspect-ratio: 1 / 1;
     place-content: center;
+}
+
+.display-weight{
+    width: 100%;
+}
+
+.agenda-card .week-s-agenda {
+}
+
+.weight-show {
+    width: 100%;
+    height: 100%;
+    /* border: solid 1px salmon; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1em 2em;
+}
+
+.printWeight {
+    width: inherit;
+    display: flex;
+    justify-content: space-between;
+    /* border: solid 1px plum; */
+}
+
+.weight-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.weight-circle {
+    border: #bc61ff 5px solid;
+    border-radius: 50%;
+    width: 32%;
+    aspect-ratio: 1 / 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
