--- a/front_fit/src/CSS/dashboard.css
+++ b/front_fit/src/CSS/dashboard.css
@@ -71,11 +71,11 @@
     display: grid;
     column-gap: 1em;
     width: 100%;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto;
 }
 
 .total-card-title{
-    grid-column: span 3;
+    grid-column: span 2;
     color: #5b029b;
 }
 
